--- a/metric_monitor/helm-charts/thanos-receive/Chart.yaml
+++ b/metric_monitor/helm-charts/thanos-receive/Chart.yaml
@@ -1,7 +1,8 @@
 apiVersion: v2
 name: thanos-receive
-description: Thanos Receive Helm chart for TRON metric monitoring
-type: application
+description: Thanos Receive Helm Chart
 version: 0.1.0
-appVersion: "0.33.0"
-dependencies: []
+dependencies:
+  - name: grafana
+    version: 7.0.0
+    repository: https://grafana.github.io/helm-charts
