--- a/metric_monitor/helm-charts/thanos-receive/templates/thanos-receive.yaml
+++ b/metric_monitor/helm-charts/thanos-receive/templates/thanos-receive.yaml
@@ -20,11 +20,9 @@ spec:
       containers:
       - name: thanos
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-        # securityContext:
-        #   runAsUser: 0  # Run as root for permission changes
         args:
         - "receive"
-        - "--label=receive_replica=\"0\""
+        - "--label=receive_replica=\"$(POD_NAME)\""
         - "--grpc-address=0.0.0.0:10907"
         - "--http-address=0.0.0.0:10909"
         - "--remote-write.address=0.0.0.0:10908"
