--- a/metric_monitor/helm-charts/thanos-receive/values.yaml
+++ b/metric_monitor/helm-charts/thanos-receive/values.yaml
@@ -15,3 +15,29 @@ thanosReceive:
     requests:
       cpu: 1000m # 1 CPU
       memory: 2Gi
+
+grafana:
+  adminPassword: "admin"
+  persistence:
+    enabled: true
+    storageClassName: "standard"
+    size: 1Gi
+  datasources:
+    datasources.yaml:
+      apiVersion: 1
+      datasources:
+      - name: Thanos
+        type: prometheus
+        url: http://thanos-query.default.svc.cluster.local:9091
+        access: proxy
+        isDefault: true
+  dashboards:
+    default:
+      thanos-dashboard:
+        gnetId: 12900
+        revision: 1
+        datasource: Thanos
+  service:
+    type: NodePort
+    port: 3000
+    nodePort: 30000
