--- a/metric_monitor/conf/prometheus-quick-start.yml
+++ b/metric_monitor/conf/prometheus-quick-start.yml
@@ -13,7 +13,7 @@ scrape_configs:
     follow_redirects: true
     static_configs:
       - targets:
-          - tron-node:9527 # use container name
+          - tron-node1:9527 # use container name
         labels:
           group: group-tron
           instance: fullnode-01
