--- a/metric_monitor/docker-compose-quick-start.yml
+++ b/metric_monitor/docker-compose-quick-start.yml
@@ -10,6 +10,9 @@ services:
     ports:
       - "8090:8090" # for external http API request
       - "9527:9527" # used for metric API
+      - "18888:18888" # for p2p node discovery
+      - "18888:18888/udp"
+      - "50051:50051"
     volumes:
       - ../conf:/java-tron/conf
       - ./output-directory:/java-tron/output-directory # mount a local directory to make the block data persistent.
