--- a/metric_monitor/docker-compose-thanos.yml
+++ b/metric_monitor/docker-compose-thanos.yml
@@ -4,8 +4,6 @@ services:
     image: tronprotocol/java-tron:latest
     container_name: tron-node1
     user: root
-    networks:
-      - tron_network
     deploy:
       resources:
         limits:
@@ -14,6 +12,8 @@ services:
       - "8090:8090" # for external http API request
       - "9527:9527" # used for metric API
       - "18888:18888" # for p2p node discovery
+      - "18888:18888/udp"
+      - "50051:50051"
     volumes:
       - ../conf:/java-tron/conf # ensure the config path is correct, make sure the config file metric is enabled
       - ./output-directory:/java-tron/output-directory # mount a local directory to make the block data persistent.
@@ -21,14 +21,13 @@ services:
     command: >
       -jvm "{-Xmx12g -Xmn2g -XX:+UseConcMarkSweepGC -XX:+PrintGC -Xloggc:./logs/gc.log }" -c ./conf/main_net_config.conf
     environment:
-      - TZ=Asia/Shanghai
+      - TZ=Asia/Shanghai # The metric and log date will be changed accordingly
+    restart: unless-stopped
 
   prometheus:
     image: quay.io/prometheus/prometheus:v2.38.0 # NOTE: It is highly recommended to use Prometheus v2.13.0+ due to its remote read improvements.
     container_name: prometheus
     user: root
-    networks:
-      - tron_network
     ports:
       - "9090:9090" # used for local query metrics
     volumes:
@@ -48,8 +47,6 @@ services:
     image: quay.io/thanos/thanos:v0.33.0
     user: root
     container_name: thanos-receive-0
-    networks:
-      - tron_network
     volumes:
       - ./receive-data-0:/receive/data
       - ./conf:/receive
@@ -73,8 +70,6 @@ services:
     image: minio/minio:RELEASE.2019-01-31T00-31-19Z
     container_name: minio
     user: root
-    networks:
-      - tron_network
     restart: always  # Optional: Restart policy
     ports:
       - "9000:9000"  # Map port 9000 on the host to port 9000 in the container
@@ -89,8 +84,6 @@ services:
     image: quay.io/thanos/thanos:v0.33.0
     container_name: thanos_store
     user: root
-    networks:
-      - tron_network
     ports:
       - "10911:10911"  # HTTP
       - "10912:10912"  # gRPC
@@ -109,8 +102,6 @@ services:
     image: quay.io/thanos/thanos:v0.33.0
     container_name: querier
     user: root
-    networks:
-      - tron_network
     ports:
       - "9091:9091"
     command:
@@ -127,8 +118,6 @@ services:
     image: grafana/grafana-oss
     container_name: grafana
     user: root
-    networks:
-      - tron_network
     deploy:
       resources:
         limits:
@@ -136,7 +125,3 @@ services:
     ports:
       - "3000:3000"
     restart: unless-stopped
-
-networks:
-  tron_network:
-    driver: bridge
