--- a/metric_monitor/docker-compose/prometheus.yml
+++ b/metric_monitor/docker-compose/prometheus.yml
@@ -7,8 +7,8 @@ services:
     ports:
       - "9090:9090" # used for local query metrics
     volumes:
-      - ./conf:/etc/prometheus
-      - ./prometheus_data:/prometheus
+      - ../conf:/etc/prometheus
+      - ../prometheus_data:/prometheus
     command:
       - "--config.file=/etc/prometheus/prometheus-remote-write.yml" # the default path to the configuration file
       - "--storage.tsdb.path=/prometheus" # the path where Prometheus stores its metric database
