--- a/metric_monitor/docker-compose/thanos-querier.yml
+++ b/metric_monitor/docker-compose/thanos-querier.yml
@@ -1,8 +1,8 @@
 version: '3.8'
 services:
-  querier:
+  thanos-querier:
     image: quay.io/thanos/thanos:v0.33.0
-    container_name: querier
+    container_name: thanos-querier
     user: root
     ports:
       - "9091:9091"
