--- a/metric_monitor/conf/bucket_storage_minio.yml
+++ b/metric_monitor/conf/bucket_storage_minio.yml
@@ -1,6 +1,6 @@
 type: S3
 config:
-  bucket: "test-thanos-sunny-001"
+  bucket: "test-thanos-001"
   endpoint: "minio:9000"
   insecure: true
   access_key: "minio"
