--- a/tools/gradlew/settings.gradle
+++ b/tools/gradlew/settings.gradle
@@ -3,3 +3,5 @@ include('docker')
 project(':docker').projectDir = new File(rootDir, '../docker')
 include('toolkit')
 project(':toolkit').projectDir = new File(rootDir, '../toolkit')
+include('stress-test')
+project(':stress-test').projectDir = new File(rootDir, '../stress_test')
