--- a/metric_monitor/conf/bucket_storage_bucket.yml
+++ b/metric_monitor/conf/bucket_storage_bucket.yml
@@ -1,7 +1,7 @@
 type: S3
 config:
   bucket: "test-thanos-001"
-  endpoint: "minio:9000"
+  endpoint: "minio:9000" # for example: s3.ap-southeast-1.amazonaws.com for AWS S3 on region ap-southeast-1
   insecure: true
   access_key: "minio"
   secret_key: "melovethanos"
