--- a/metric_monitor/docker-compose/grafana.yml
+++ b/metric_monitor/docker-compose/grafana.yml
@@ -8,6 +8,8 @@ services:
       resources:
         limits:
           memory: 1g
+    environment:
+      - GF_METRICS_ENABLED=true  # 启用 Grafana 的指标暴露
     ports:
       - "3000:3000"
     restart: unless-stopped
