--- a/metric_monitor/conf/prometheus-remote-write.yml
+++ b/metric_monitor/conf/prometheus-remote-write.yml
@@ -20,6 +20,11 @@ scrape_configs:
         labels:
           group: group-tron
           instance: fullnode-01
+      - targets:
+          - node-exporter:9100
+        labels:
+          group: node-exporter-full
+          instance: tron-docker-dev-01
 
 # The remote_write configuration tells Prometheus to continuously write metrics to the Thanos Receive service.
 # Refer https://prometheus.io/docs/prometheus/latest/configuration/configuration/#remote_write
@@ -27,7 +32,7 @@ remote_write:
   - url: http://thanos-receive-0:10908/api/v1/receive # if Thanos Receive service run on the same host with Prometheus
     headers:
       X-Auth-Token: "token"
-      X-Service-Group: "java-tron"
+      X-Service-Group: "tron-fullnode-group1"
     remote_timeout: 10s
     queue_config:
       capacity: 2500
