--- a/metric_monitor/docker-compose/thanos-store.yml
+++ b/metric_monitor/docker-compose/thanos-store.yml
@@ -8,7 +8,7 @@ services:
       - "10911:10911"  # HTTP
       - "10912:10912"  # gRPC
     volumes:
-      - ../store-data:/var/thanos/store
+      - ../store-data:/var/thanos/store # Path relative to this file
       - ../conf:/etc/thanos
     command:
       - "store"
