--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,12 @@ go1.*
 /single_node/output-directory/
 /metric_monitor/logs/
 /private_net/logs/
+/logs_monitor/loki-data/
+/logs_monitor/minio/
+/logs_monitor/promtail-data/
+/metric_monitor/prometheus_data/
+/metric_monitor/receive-data/
+/metric_monitor/minio/
+/metric_monitor/helm-charts/thanos-receive/charts/
+/metric_monitor/helm-charts/thanos-receive/Chart.lock
+/metric_monitor/store-data/
