--- a/single_node/docker-compose-quick-start.yml
+++ b/single_node/docker-compose-quick-start.yml
@@ -9,3 +9,5 @@ services:
       - "18888:18888"
       - "18888:18888/udp"
       - "50051:50051"
+    command: >
+      -jvm "{-Xmx14g -Xmn2g -XX:MaxDirectMemorySize=1G -XX:+UseConcMarkSweepGC -XX:+PrintGC -Xloggc:./logs/gc.log}"
