--- a/tools/docker/Dockerfile.nile
+++ b/tools/docker/Dockerfile.nile
@@ -21,8 +21,8 @@ RUN apt-get update $NO_PROXY_CACHE  && \
   && echo "git clone" \
   && mkdir -p $TMP_DIR \
   && cd $TMP_DIR \
-  && git clone https://github.com/tronprotocol/java-tron.git \
-  && cd java-tron \
+  && git clone https://github.com/tron-nile-testnet/nile-testnet.git \
+  && cd nile-testnet \
   && git checkout master \
   && ./gradlew build -x test \
   && cd build/distributions \
@@ -32,8 +32,8 @@ RUN apt-get update $NO_PROXY_CACHE  && \
   && rm -rf ~/.gradle \
   && mv /usr/local/$JDK_DIR/jre /usr/local \
   && rm -rf /usr/local/$JDK_DIR \
-  && wget -P $BASE_DIR/config https://raw.githubusercontent.com/tronprotocol/tron-deployment/master/main_net_config.conf \
-  && mv $BASE_DIR/config/main_net_config.conf $BASE_DIR/config.conf \
+  && wget -P $BASE_DIR/config https://raw.githubusercontent.com/tronprotocol/tron-deployment/master/test_net_config.conf \
+  && mv $BASE_DIR/config/test_net_config.conf $BASE_DIR/config.conf \
   # Clean apt cache
   && apt-get clean \
   && rm -rf /var/cache/apt/archives/* /var/cache/apt/archives/partial/* \
@@ -52,11 +52,11 @@ ENTRYPOINT ["./bin/docker-entrypoint.sh"]
 ARG BUILD_DATE
 ARG VCS_REF
 LABEL org.label-schema.build-date=$BUILD_DATE \
-      org.label-schema.name="Java-TRON" \
+      org.label-schema.name="Java-TRON Nile Testnet" \
       org.label-schema.description="TRON protocol" \
       org.label-schema.url="https://tron.network/" \
       org.label-schema.vcs-ref=$VCS_REF \
-      org.label-schema.vcs-url="https://github.com/tronprotocol/java-tron.git" \
+      org.label-schema.vcs-url="https://github.com/tron-nile-testnet/nile-testnet.git" \
       org.label-schema.vendor="TRON protocol" \
       org.label-schema.version=$VERSION \
       org.label-schema.schema-version="1.0"
