--- a/tools/docker/build.gradle
+++ b/tools/docker/build.gradle
@@ -61,21 +61,30 @@ def dockerBuildVersion = project.hasProperty('release.releaseVersion') ? project
 def dockerOrgName = project.hasProperty('dockerOrgName') ? project.getProperty("dockerOrgName") : "tronprotocol"
 def dockerArtifactName = project.hasProperty("dockerArtifactName") ? project.getProperty("dockerArtifactName") : "java-tron"
 def dockerImageName = "${dockerOrgName}/${dockerArtifactName}"
+def dockerNetwork = project.hasProperty("network") ? project.getProperty("network") : "mainnet"
 
 task sourceDocker {
     def dockerBuildDir = "${rootDir}/build/docker-tron/"
+    def dockerfileName = "Dockerfile"
+
+    def image = "${dockerImageName}:${dockerBuildVersion}"
+    if (dockerNetwork != "mainnet" && dockerNetwork != "") {
+        dockerfileName = "${dockerfileName}.${dockerNetwork}"
+        image = "${dockerImageName}-${dockerNetwork}:${dockerBuildVersion}"
+    }
 
     doLast {
         copy {
-            from file("${rootDir}/../docker/Dockerfile")
+            from file("${rootDir}/../docker/${dockerfileName}")
             into(dockerBuildDir)
         }
+        file("${dockerBuildDir}/${dockerfileName}").renameTo("${dockerBuildDir}/Dockerfile")
+
         copy {
             from file("${rootDir}/../docker/docker-entrypoint.sh")
             into "${dockerBuildDir}"
         }
         exec {
-            def image = "${dockerImageName}:${dockerBuildVersion}"
             def dockerPlatform = ""
             if (project.hasProperty('docker-platform')){
                 dockerPlatform = "--platform ${project.getProperty('docker-platform')}"
@@ -97,13 +106,17 @@ task testDocker {
     dependsOn sourceDocker
     def dockerReportsDir = "${rootDir}/../docker/reports/"
 
+    def image = "${dockerImageName}:${dockerBuildVersion}"
+    if (dockerNetwork != "mainnet" && dockerNetwork != "") {
+        image = "${dockerImageName}-${dockerNetwork}:${dockerBuildVersion}"
+    }
+
     doFirst {
         new File(dockerReportsDir).mkdir()
     }
 
     doLast {
         exec {
-            def image = "${dockerImageName}:${dockerBuildVersion}"
             workingDir "${rootDir}/../docker"
             executable shell
             args "-c", "./test.sh ${image}"
@@ -114,7 +127,11 @@ task testDocker {
 // Make sure to `docker login` first
 task dockerUpload {
     dependsOn sourceDocker
+
     def image = "${dockerImageName}:${dockerBuildVersion}"
+    if (dockerNetwork != "mainnet" && dockerNetwork != "") {
+        image = "${dockerImageName}-${dockerNetwork}:${dockerBuildVersion}"
+    }
 
     doLast {
         exec {
