--- a/tools/toolkit/build.gradle
+++ b/tools/toolkit/build.gradle
@@ -56,6 +56,8 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.12'
     testCompileOnly 'org.projectlombok:lombok:1.18.12'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.12'
+
+    implementation 'com.alibaba:fastjson:1.2.83'
 }
 
 application {
