--- a/metric_monitor/docker-compose/grafana.yml
+++ b/metric_monitor/docker-compose/grafana.yml
@@ -10,9 +10,9 @@ services:
           memory: 1g
     environment:
       - GF_METRICS_ENABLED=true  # Enable Grafana metrics exposure
+      - GF_SERVER_HTTP_PORT=3000  # Set Grafana's internal port to 3000
     volumes:
       - ../grafana_data:/var/lib/grafana  # Grafana database and dashboards
-      - ../grafana_config:/etc/grafana    #
     ports:
       - "3000:3000"
     restart: unless-stopped
