--- a/.github/workflows/docker-s3-deploy.yml
+++ b/.github/workflows/docker-s3-deploy.yml
@@ -22,11 +22,22 @@ jobs:
           # Ensure the directory exists
           if [ -d "tools/docker/codepipeline" ]; then
             cd tools/docker/codepipeline
-            zip -r ../../../tron-docker.zip ./appspec.yml ./validate_service.sh ./start_service.sh ./prepare_environment.sh ./docker-compose.fullnode.nile.yml
+            zip -r ../../../tron-docker.zip ./appspec.yml ./validate_service.sh ./start_service.sh ./prepare_environment.sh ./docker-compose.fullnode.main.yml
           else
             echo "Error: tools/docker/codepipeline directory not found!"
             exit 1
           fi
+
+      - name: Import GPG key
+        uses: crazy-max/ghaction-import-gpg@v6
+        with:
+          gpg_private_key: ${{ secrets.GPG_PRIVATE_KEY }}
+          passphrase: ${{ secrets.GPG_PASSPHRASE }}
+
+      - name: Sign tron-docker.zip with GPG
+        run: |
+          gpg --detach-sign --armor tron-docker.zip
+          # This creates tron-docker.zip.asc (ASCII-armored signature)
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -37,5 +48,6 @@ jobs:
 
       - name: Upload tron-docker.zip to S3
         run: |
-          aws s3 cp tron-docker.zip s3://${{ github.event.inputs.bucket-name }}/package/publish-latest.zip
-          aws s3 cp tron-docker.zip s3://${{ github.event.inputs.bucket-name }}/package/publish-v0.1.1.zip
+          zip -r publish.zip tron-docker.zip tron-docker.zip.asc
+          aws s3 cp publish.zip s3://${{ github.event.inputs.bucket-name }}/package/publish-latest.zip
+          aws s3 cp publish.zip s3://${{ github.event.inputs.bucket-name }}/package/publish-v0.1.1.zip
