--- a/metric_monitor/docker-compose.yml
+++ b/metric_monitor/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '3.8'
 services:
-  tron-node1:
+  tron_node1:
     image: tronprotocol/java-tron:latest
-    container_name: tron-node1
+    container_name: tron_node1
     networks:
       - tron_network
     deploy:
