--- a/metric_monitor/metric_conf/prometheus.yml
+++ b/metric_monitor/metric_conf/prometheus.yml
@@ -12,12 +12,12 @@ scrape_configs:
     follow_redirects: true
     static_configs:
       - targets:
-          - tron-node1:9527 # use container name
+          - tron_node1:9527 # use container name
         labels:
           group: group-tron
           instance: fullnode-01
 #      - targets: # to add more fullnodes
-#          - tron-node2:9527
+#          - tron_node2:9527
 #        labels:
 #          group: group-tron
 #          instance: fullnode-01
