--- a/private_net/docker-compose.yml
+++ b/private_net/docker-compose.yml
@@ -1,14 +1,14 @@
 version: '3.8'
 services:
-  tron-witness1:
+  tron_witness1:
     image: tronprotocol/java-tron:latest
-    container_name: tron-witness1
+    container_name: tron_witness1
     networks:
       - tron_private_network
     deploy:
       resources:
         limits:
-          memory: 12g
+          memory: 16g
     ports:
       - "8090:8090" # for external http API request
       - "50051:50051" # for external rpc API request
@@ -16,50 +16,50 @@ services:
       - ../conf:/java-tron/conf
       - ./datadir:/java-tron/data # mount a local directory to make the blocks data persistent.
     command: >
-      -jvm "{-Xmx12g -Xms3g -XX:+UseConcMarkSweepGC}" -c /java-tron/conf/private_net_config_witness1.conf -d /java-tron/data -w
+      -jvm "{-Xmx16g -Xms12g -XX:+UseConcMarkSweepGC}" -c /java-tron/conf/private_net_config_witness1.conf -d /java-tron/data -w
 
-    #  tron-witness2:
+    #  tron_witness2:
     #    image: tronprotocol/java-tron:latest
-    #    container_name: tron-witness2         # change container_name
+    #    container_name: tron_witness2         # change container_name
     #    networks:
     #      - tron_private_network
     #    deploy:
     #      resources:
     #        limits:
-    #          memory: 12g
+    #          memory: 16g
     #    volumes:
     #      - ../conf:/java-tron/conf
     #    command: >
-    #      -jvm "{-Xmx12g -Xms3g -XX:+UseConcMarkSweepGC}"
+    #      -jvm "{-Xmx16g -Xms12g -XX:+UseConcMarkSweepGC}"
     #      -c /java-tron/conf/private_net_config_witness2.conf
     #      -w
-  tron-node1:
+  tron_node1:
     image: tronprotocol/java-tron:latest
-    container_name: tron-node1
+    container_name: tron_node1
     networks:
       - tron_private_network
     deploy:
       resources:
         limits:
-          memory: 12g
+          memory: 16g
     volumes:
       - ../conf:/java-tron/conf
     command: >
-      -jvm "{-Xmx12g -Xms3g -XX:+UseConcMarkSweepGC}" -c /java-tron/conf/private_net_config_others.conf
+      -jvm "{-Xmx16g -Xms12g -XX:+UseConcMarkSweepGC}" -c /java-tron/conf/private_net_config_others.conf
 
-#  tron-node2:
+#  tron_node2:
 #    image: tronprotocol/java-tron:latest
-#    container_name: tron-node2   # just need change container_name
+#    container_name: tron_node2   # just need change container_name
 #    networks:
 #      - tron_private_network
 #    deploy:
 #      resources:
 #        limits:
-#          memory: 12g
+#          memory: 16g
 #    volumes:
 #      - ../conf:/java-tron/conf
 #    command: >
-#      -jvm "{-Xmx12g -Xms3g -XX:+UseConcMarkSweepGC}"
+#      -jvm "{-Xmx16g -Xms12g -XX:+UseConcMarkSweepGC}"
 #      -c /java-tron/conf/private_net_config_others.conf
 networks:
   tron_private_network:
