--- a/conf/private_net_config_witness1.conf
+++ b/conf/private_net_config_witness1.conf
@@ -199,6 +199,7 @@ seed.node = {
   ]
 }
 
+# if you use the fork database from mainnet keep this genesis.block the same as mainnet
 genesis.block = {
   # Reserve balance
   assets = [
