--- a/tools/toolkit/src/main/resources/fork.conf
+++ b/tools/toolkit/src/main/resources/fork.conf
@@ -53,6 +53,6 @@ trc20Contracts = [
   }
 ]
 
-latestBlockHeaderTimestamp = 1739269661000
+latestBlockHeaderTimestamp = 1739269661000 # Used in init setup, setting to current timestamp reduces debug log output and speeds up initialization. It does not make logic skip block production.
 maintenanceTimeInterval = 21600000
-nextMaintenanceTime = 1735628894000
+nextMaintenanceTime = 1735628894000 # Sets an expired time to trigger maintenance logic immediately after node startup
