--- a/tools/toolkit/src/main/resources/fork.conf
+++ b/tools/toolkit/src/main/resources/fork.conf
@@ -55,4 +55,4 @@ trc20Contracts = [
 
 latestBlockHeaderTimestamp = 1747986162000 # Used in init setup, setting to current timestamp reduces debug log output and speeds up initialization. This setting does not impact the underlying block production logic.
 maintenanceTimeInterval = 21600000
-nextMaintenanceTime = 1747996162000 # Set anytime. If you set an expired time to trigger maintenance logic immediately after node startup
+nextMaintenanceTime = 1747996162000 # Set anytime. If you set an expired time, it will trigger maintenance logic immediately after node startup.
