feat(metrics): add default config for alloy agent (#85)

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
     branches: [main, develop, release_*]
 
+# Add explicit permissions - restrict to only what's needed
+permissions:
+  contents: read
+
 jobs:
   lint:
     runs-on: ubuntu-latest
