--- a/.github/workflows/docker-s3-deploy.yml
+++ b/.github/workflows/docker-s3-deploy.yml
@@ -9,6 +9,14 @@ on:
       aws-region:
         description: 'AWS region for the S3 bucket (e.g., ap-southeast-1)'
         required: true  # Makes the input mandatory
+      version:
+        description: 'Version of the package'
+        required: true  # Makes the input mandatory
+
+# Add explicit permissions - restrict to only what's needed
+permissions:
+  contents: read
+  id-token: write  # Needed for AWS credential provider
 
 jobs:
   build-and-sign:
@@ -50,4 +58,4 @@ jobs:
         run: |
           zip -r publish.zip tron-docker.zip tron-docker.zip.asc
           aws s3 cp publish.zip s3://${{ github.event.inputs.bucket-name }}/package/publish-latest.zip
-          aws s3 cp publish.zip s3://${{ github.event.inputs.bucket-name }}/package/publish-v0.1.1.zip
+          aws s3 cp publish.zip s3://${{ github.event.inputs.bucket-name }}/package/publish-${{github.event.inputs.version}}.zip
