support all volume not noly root disk

--- a/metric_monitor/docker-compose/node-exporter.yml
+++ b/metric_monitor/docker-compose/node-exporter.yml
@@ -6,7 +6,13 @@ services:
     ports:
       - "9100:9100"  # For metric collection
     volumes:
-      - "./:/host:ro,rslave"
+      - "/proc:/host/proc:ro"
+      - "/sys:/host/sys:ro"
+      - "/:/rootfs:ro"
     command:
-      - "--path.rootfs=/host"
+    - "--path.procfs=/host/proc"
+    - "--path.sysfs=/host/sys"
+    - "--path.rootfs=/rootfs"
+    - "--collector.filesystem.ignored-mount-points=^$"
+    - "--collector.filesystem.ignored-fs-types=^$"
     restart: unless-stopped
