replace 'find' with 'discover'

--- a/conf/private_net_config_others.conf
+++ b/conf/private_net_config_others.conf
@@ -51,7 +51,7 @@ storage {
 
 # this part of config is used to node discovery.
 node.discovery = {
-  enable = true  # you should set this entry value with true if you want to find other nodes.
+  enable = true  # you should set this entry value with true if you want to discover other nodes.
   persist = true  # this entry is used to determined to whether storing the peers in the database or not.
 }
 
