--- a/conf/main_net_config.conf
+++ b/conf/main_net_config.conf
@@ -180,7 +180,7 @@ node {
   inactiveThreshold = 600 //seconds
 
   p2p {
-    version = 11111 # 11111: mainnet; 20180622: testnet
+    version = 11111 # mainnet:11111; nile testnet:201910292
   }
 
   active = [
