--- a/conf/private_net_config_witness1.conf
+++ b/conf/private_net_config_witness1.conf
@@ -96,7 +96,7 @@ node {
   isOpenFullTcpDisconnect = true
 
   p2p {
-    version = 1 # 11111: Mainnet; 20180622: Nile testnet; you can set other number when you deploy one private net, but the node must have the same number in some private net.
+    version = 1 # mainnet:11111; nile testnet:201910292; other net: customized, should not be equal to 11111 or 201910292.
   }
 
   active = [
