--- a/metric_monitor/docker-compose/node-exporter.yml
+++ b/metric_monitor/docker-compose/node-exporter.yml
@@ -3,6 +3,8 @@ services:
   node-exporter:
     image: quay.io/prometheus/node-exporter:latest
     container_name: node-exporter
+    network_mode: host
+    pid: host
     ports:
       - "9100:9100"  # For metric collection
     volumes:
