recover (+1 squashed commit) Squashed commits: [cfdfcf2] update (+1 squashed commit) Squashed commits: [edd8cb8] update (+1 squashed commit) Squashed commits: [b1eb9b2] remove jar (+3 squashed commits) Squashed commits: [52e91f3] update conf [eb89d8b] update [cf2d298] recover (+5 squashed commits) Squashed commits: [1f8c7e9] update [158c4d1] update [c2b270e] relay conf [120c1d9] fix build with test repo [102a901] modify relay step

--- a/tools/stress_test/stress.conf
+++ b/tools/stress_test/stress.conf
@@ -7,7 +7,7 @@ collectAddress = {
 }
 
 generateTx = {
-  enable = true
+  enable = false
   totalTxCnt = 600000
   singleTaskTxCount = 100000
   txType = {
@@ -26,8 +26,8 @@ generateTx = {
 relayTx = {
   enable = false
   url = "grpc.trongrid.io:50051"
-  startBlockNumber = 59720000
-  endBlockNumber = 59720500
+  startBlockNumber = 75630273
+  endBlockNumber = 75637473
 }
 
 broadcastTx = {
