--- a/tools/stress_test/stress.conf
+++ b/tools/stress_test/stress.conf
@@ -24,7 +24,7 @@ generateTx = {
 }
 
 relayTx = {
-  enable = false
+  enable = true
   url = "grpc.trongrid.io:50051"
   startBlockNumber = 75630273
   endBlockNumber = 75637473
